--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h2>2006</h2>
         <h3>Peak GHG Emissions</h3>
       </div>
-      <img src="https://placehold.co/250x100" alt="Chart representing Intel's peak greenhouse gas emissions in 2006" />
+      <img src="img/5.png" alt="Chart representing Intel's peak greenhouse gas emissions in 2006" />
       <p>
         This year marks Intel's highest annual greenhouse gas emissions 
         for operations. Over subsequent years, Intel invests heavily in 
@@ -118,7 +118,7 @@
         <h2>2020</h2>
         <h3>RISE Strategy</h3>
       </div>
-      <img src="https://placehold.co/250x100" alt="Intel's RISE strategy launch in 2020 focusing on responsibility, inclusivity, sustainability, and enablement" />
+      <img src="img/6.png" alt="Intel's RISE strategy launch in 2020 focusing on responsibility, inclusivity, sustainability, and enablement" />
       <p>
         Intel launches its RISE (Responsible, Inclusive, Sustainable, 
         Enabling) strategy and 2030 goals, aiming to drive industry-wide 
@@ -132,7 +132,7 @@
         <h2>2022</h2>
         <h3>Net-Zero By 2040</h3>
       </div>
-      <img src="https://placehold.co/250x100" alt="Intel's 2022 commitment to achieve net-zero greenhouse gas emissions by 2040" />
+      <img src="img/7.png" alt="Intel's 2022 commitment to achieve net-zero greenhouse gas emissions by 2040" />
       <p>
         Intel announces its commitment to achieve net-zero greenhouse 
         gas emissions (Scope 1 and 2) across its global operations 
@@ -146,7 +146,7 @@
         <h2>2023</h2>
         <h3>Renewable Electricity</h3>
       </div>
-      <img src="https://placehold.co/250x100" alt="Intel achieving 99% renewable electricity usage worldwide in 2023" />
+      <img src="img/8.png" alt="Intel achieving 99% renewable electricity usage worldwide in 2023" />
       <p>
         The company achieves 99% renewable electricity usage worldwide, 
         helping to drastically lower carbon emissions and driving progress 
@@ -160,7 +160,7 @@
         <h2>2024</h2>
         <h3>Sustainability Summit</h3>
       </div>
-      <img src="https://placehold.co/250x100" alt="Intel's first Sustainability Summit in 2024 with industry leaders and government officials" />
+      <img src="img/9.png" alt="Intel's first Sustainability Summit in 2024 with industry leaders and government officials" />
       <p>
         Intel hosts its first Sustainability Summit, uniting suppliers, 
         government officials, and industry leaders to collaborate on 
